Update library.properties with Dependency

--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Use this in an ESP32 to ping a remote machine
 category=Communication
 url=https://github.com/fatlab101/Esp32IcmpPing
 architectures=esp32
+depends=FixedString
